trunk/Archive2/d5/fd2a110b7686ab/output
main.cpp:10:18: error: 'virtual void Dog::walk()' marked override, but does not override
     virtual void walk() override;
                  ^
